app/assets/stylesheets/components/code_listing.css.scss
@use "sass:map";
$dot-size: 9px;

// Annotation colors
$annotation-question: $purple;
$annotation-user: $success;
$annotation-error: $danger;
$annotation-warning: $warning;
$annotation-info: $info;

.code-table {
  .dot {
    float: left;
    margin-left: 4px;
    margin-top: 4px;
    height: $dot-size;
    width: $dot-size;
    border-radius: 100%;
  }

  .feedback-table-options .dot {
    margin-left: 5px;
    margin-top: 15px;
  }

  .dot-info {
    background-color: $annotation-info;
  }

  .dot-warning {
    background-color: $annotation-warning;
  }

  .dot-annotation {
    background-color: $annotation-user;
  }

  .dot-error {
    background-color: $annotation-error;
  }

  .dot-question {
    background-color: $annotation-question;
  }

  .code-listing-container {
    position: relative;
    left: 0;
    top: 0;
    margin-top: 10px;

    .copy-btn {
      margin-right: 5px;
      margin-top: -4px;
      position: absolute;
      right: 1px;
      top: 0;
    }

    .code-listing {
      display: block;
      overflow-x: auto;
      white-space: nowrap;
      background-color: $content-bg;

      // Override the normal pre padding & coloring
      pre {
        padding: 0;
        background-color: transparent;
        margin-bottom: 0;
        border: none;
        border-radius: 0;
        white-space: pre-wrap;
        line-height: 20px;
      }

      // Highlight for the line numbers.
      .lineno.marked {
        background-color: $warning-container;

        // border-left: $code-warning-border-left solid $warning;
        // Only do the line number, don't extend to the full height
        background-clip: content-box;
      }

      // Highlight for the code itself.
      .lineno.marked .rouge-code pre {
        background-color: $warning-container;
      }

      .annotation-button {
        display: none;
        position: absolute;
        width: 30px;
        height: 30px;
        left: -15px;
        margin-top: -7px;
        border-radius: 50%;
        padding-top: 4px;
      }

      .annotation-button:hover {
        transform: scale(1.15);
        transition: 0.1s ease-in-out;
      }

      .lineno:first-child {
        .rouge-code,
        .rouge-gutter {
          padding-top: 5px;
        }
      }

      .lineno:last-child {
        .rouge-code,
        .rouge-gutter {
          padding-bottom: 5px;
        }
      }

      .lineno:hover .annotation-button {
        display: block;
      }

      .rouge-code {
        width: 100%;

        pre {
          padding-left: 5px;
          white-space: pre-wrap;
          word-break: break-word;
        }
      }

      .rouge-gutter {
        vertical-align: top;
        white-space: nowrap;
        text-align: right;

        pre {
          padding-right: 5px;
          margin-left: 20px;
          white-space: nowrap;
          font-family: $font-family-monospace;
          color: $on-surface-muted;
        }
      }

      // General lighter background on the right side
      .rouge-code,
      .annotation-cell {
        background-color: $background;
      }

      .hide {
        display: none;
      }

      .annotation-cell {
        width: 100%;
        min-width: 100%;
      }
    }
  }

  #feedback-table-global-annotations.has-annotations {
    padding-bottom: 10px;
  }

  d-code-listing-row {
    display: contents;
  }

  .thread {
    margin: 3px 5px;
    padding-left: 5px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border: 1px solid $divider;
    background: $content-bg;
    white-space: normal;

    .annotation {
      margin: 2px 0;
      border: none;
      border-left: 3px solid $outline;
    }

    d-user-annotation {
      display: block;

      .dropdown {
        position: static;
      }
    }

    .fake-input {
      margin: 4px 5px 4px 0;
      display: flex;
      align-items: center;

      span {
        margin-left: 15px;
        margin-right: 5px;
      }

      .form-control {
        border-color: $divider;
      }
    }
  }

  .annotation {
    margin: 3px 5px;
    padding: 2px 5px 2px 10px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border: 1px solid $divider;
    border-left-width: 3px;
    border-left-color: $outline;
    background: $content-bg;
    white-space: normal;

    .annotation-header {
      .annotation-meta {
        font-size: 85%;
        color: $on-surface-muted;
      }
      /* stylelint-disable selector-class-pattern */
      .annotation-edit,
      .question-resolve,
      .question-in_progress,
      .question-unresolve {
        float: right;
      }
      /* stylelint-enable selector-class-pattern */

      .annotation-meta-icon {
        &::before {
          vertical-align: bottom;
        }

        margin-left: 4px;
      }

      .annotation-warning::before {
        vertical-align: bottom;
      }
    }

    .annotation-text {
      word-break: break-word;
      padding-bottom: 4px;

      p:last-child {
        margin-bottom: 0;
      }

      // Override the normal pre padding & coloring
      pre {
        padding: 0;
        background-color: $code-bg !important;
        margin-bottom: 0;
        border: none;
        border-radius: 0;
        white-space: pre-wrap;
        line-height: 20px;
      }

      // Stylize the embedded code block
      .highlighter-rouge div.highlight,
      pre:not(.highlight) {
        padding: 5px 10px;
        margin-left: 10px;
        margin-right: 10px;
        margin-bottom: 10px;
        background: $code-bg;
        border-radius: 3px;
      }

      .highlighter-rouge {
        margin-top: 8px;
        margin-bottom: 8px;
      }

      hr {
        margin-top: 8px;
        margin-bottom: 8px;
      }

      img {
        display: block;
        margin: 10px auto 20px;
        max-width: 300px;

        @include media-breakpoint-up(md) {
          max-width: calc(#{map.get($container-max-widths, "md")} * 0.6);
        }

        @include media-breakpoint-up(lg) {
          max-width: calc(#{map.get($container-max-widths, "lg")} * 0.7);
        }

        @include media-breakpoint-up(xl) {
          max-width: calc(#{map.get($container-max-widths, "xl")} * 0.7);
        }
      }
    }
  }

  .annotation.question {
    border-left-color: $annotation-question;
  }

  .annotation.error {
    border-left-color: $annotation-error;
  }

  .annotation.warning {
    border-left-color: $annotation-warning;
  }

  .annotation.info {
    border-left-color: $annotation-info;
  }

  .annotation.user {
    border-left-color: $annotation-user;
  }

  .annotation.machine-annotation {
    .annotation-text {
      font-family: $font-family-monospace;

      // pre-wrap for browsers that don't support break-spaces.
      white-space: pre-wrap;
      white-space: break-spaces;
    }
  }

  .annotation-submission {
    padding: 5px;

    .annotation-controls-block {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    .annotation-submission-button-container {
      margin-top: 12px;
      margin-bottom: 12px;
      text-align: right;

      .annotation-control-button,
      .question-control-button {
        margin-left: 3px;
      }

      .annotation-submission-error-list {
        margin-top: 3px;
        margin-bottom: 3px;
      }
    }

    .annotation-submission-input {
      border-radius: 0;
      resize: vertical;
    }

    .annotation-submission-input.validation-error {
      border-color: $danger;
    }
  }

  d-machine-annotation-marker {
    position: relative;

    .marker-tooltip {
      display: inline-block;
      visibility: hidden;
      width: max-content;
      white-space: initial;
      z-index: 1000;
      color: $on-surface;
      font-style: initial;
      padding-left: 5px;
      border-top-right-radius: 5px;
      border-bottom-right-radius: 5px;
      border: 1px solid #47464a;
      background: #303034;

      .annotation {
        margin: 4px 0;
        border-right: none;
        border-top: none;
        border-bottom: none;
      }
    }

    &:hover .marker-tooltip {
      visibility: visible;
    }

    .mark-error {
      text-decoration: wavy underline $danger;

      &.mark-empty::before {
        color: $danger;
      }
    }

    .mark-warning {
      text-decoration: wavy underline $warning;

      &.mark-empty::before {
        color: $warning;
      }
    }

    .mark-info {
      text-decoration: wavy underline $info;

      &.mark-empty::before {
        color: $info;
      }
    }

    .mark-empty {
      position: relative;

      &::before {
        font: normal normal normal 14px/1 "Material Design Icons", sans-serif;
        position: absolute;
        content: "\F0143";
        top: 7px;
        left: -7px;
      }
    }
  }
}

